--- a/Mapa de Cg MS/style.css
+++ b/Mapa de Cg MS/style.css
@@ -89,10 +89,10 @@ button:hover {
 }
 
 .leaflet-routing-container {
-    max-height: 350px;
+    max-height: 150px;
     overflow-y: auto;
     background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 5px;
+    border-radius: 20px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -169,6 +169,10 @@ button:hover {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
     font-size: 16px;
     z-index: 1000;
+}
+
+.debug-info-hidden {
+    display: none;
 }
 
 @media (max-width: 600px) {
